Fixed dropdown boxes being clipped in dialogs, updated Meteor

--- a/rpg-docs/client/views/paperTemplates/dialogStack/dialogStack.css
+++ b/rpg-docs/client/views/paperTemplates/dialogStack/dialogStack.css
@@ -68,7 +68,7 @@
 	transform-origin: top left;
 	transition: top 400ms ease, left 400ms ease;
 	z-index: 3;
-	overflow: hidden;
+	overflow: visible;
 }
 
 .dialog-stack .dialog .testButton {
